git-svn-id: https://svn.aros.org/svn/aros/trunk@25394 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/documentation/documentation/users/faq.fi
+++ b/documentation/documentation/users/faq.fi
@@ -4,7 +4,7 @@ FAQ - Usein kysyttyä
 
 :Authors:   Aaron Digulla, Adam Chodorowski
 :Copyright: Copyright © 1995-2004, The AROS Development Team
-:Version:   $Revision: 23365 $
+:Version:   $Revision$
 :Date:      $Date$
 :Status:    Done.
 
