Fixed problem with encoding of copyright symbol.
git-svn-id: https://svn.aros.org/svn/aros/trunk@26239 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/documentation/documentation/users/faq.en
+++ b/documentation/documentation/users/faq.en
@@ -3,7 +3,7 @@ Frequently Asked Questions
 ==========================
 
 :Authors:   Aaron Digulla, Adam Chodorowski, Sergey Mineychev, AROS-Exec.org
-:Copyright: Copyright Ò 1995-2004, The AROS Development Team
+:Copyright: Copyright © 1995-2004, The AROS Development Team
 :Version:   $Revision$
 :Date:      $Date$
 :Status:    Done.
