EN and RU FAQ updated. Translators, take care
git-svn-id: https://svn.aros.org/svn/aros/trunk@26368 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/documentation/documentation/users/faq.en
+++ b/documentation/documentation/users/faq.en
@@ -3,7 +3,7 @@ Frequently Asked Questions
 ==========================
 
 :Authors:   Aaron Digulla, Adam Chodorowski, Sergey Mineychev, AROS-Exec.org
-:Copyright: Copyright © 1995-2004, The AROS Development Team
+:Copyright: Copyright Š 1995-2007, The AROS Development Team
 :Version:   $Revision$
 :Date:      $Date$
 :Status:    Done.
@@ -461,8 +461,215 @@ There's a lot of programs able to create/edit ISO's like UltraISO, WinImage,
 or mkisofs. Second, you can set up the network in AROS and FTP server on your 
 host machine. Then you can use FTP client for AROS to transfer files
 (look for MarranoFTP). This is tricky enough to stop at this point. User 
-documentation contains a chapter about networking, go for it.
+documentation contains a chapter about networking, go for it. Also, now
+there`s a promising utility (AFS Util), allowing to read (no write support yet) 
+files from AROS AFFS/OFS disks and floppies.  
 
+Compilation Errors
+------------------
+
+Q: I`ve compiled AROS with gcc4 but found that compiled AROS-hosted segfaults 
+with -m > 20 and if I compile AROS-native it does not start (black screen)
+A: Add -fno-strict-aliasing to scripts/aros-gcc.in and try to recompile.
+
+Is it possible to make a DOS script that automatically runs when a package is installed? 
+----------------------------------------------------------------------------------------
+
+This script should do some assigns and add string to the PATH variable.
+
+1) Create a subdir S and add a file with name 'Package-Startup' with the DOS 
+commands to it.
+
+2) Create a variable in the envarc:sys/packages file which contains the path to the S 
+directory of your package.
+
+Example::
+    Directory layout:
+
+    sys:Extras/myappdir
+    sys:Extras/myappdir/S
+    sys:Extras/myappdir/S/Package-Startup
+    
+The variable in envarc:sys/packages could have the name 'myapp' (name doesn't 
+matter), the content would then be 'sys:extras/myappdir'
+
+The Package-Startup script would then be called by the startup-sequence.
+
+This is were it is called::
+
+    If EXISTS ENV:SYS/Packages
+        List ENV:SYS/Packages NOHEAD FILES TO T:P LFORMAT="If EXISTS $SYS/Packages/%s*NCD $SYS/Packages/%s*NIf EXISTS S/Package-Startup*NExecute S/Package-Startup*NEndif*NEndif*N"
+        Execute T:P
+        Delete T:P QUIET
+        CD SYS:
+    EndIf
+    
+How do I clear the shell window? How do I set it permanently?
+-------------------------------------------------------------
+
+Type this command in the shell::
+
+    Echo "*E[0;0H*E[J* "
+    
+You can edit your S:Shell-Startup and insert this line somewhere, so 
+you'll have a new "Cls" command::
+
+    Alias Cls "Echo *"*E[0;0H*E[J*" "
+
+Btw here is my new S:Shell-Startup modified to start the shell in black and 
+with a modified prompt::
+
+    Alias Edit SYS:Tools/Editor
+    Alias Cls "Echo *"*E[0;0H*E[J*" "
+    Echo "*e[>1m*e[32;41m*e[0;0H*e[J"
+    Prompt "*n*e[>1m*e[33;41m*e[1m%N/%R - *e[30;41m%S>*e[0m*e[32;41m "
+    date
+
+More about printer escape sequences::
+
+    Esc[0m
+    Standard Set
+
+    Esc[1m and Esc[22m
+    Bold
+
+    Esc[3m and Esc[23m
+    Italics
+
+    Esc[4m and Esc[24m
+    Underline
+
+    Esc[30m to Esc[39m
+    Set Front Color
+
+    Esc[40m to Esc[49m
+    Set Background Color
+
+Values meanings::
+
+    30 grey char -- 40 grey cell -- >0 grey background ---- 0 all attributes off
+    31 black char - 41 black cell - >1 black background --- 1 boldface
+    32 white char - 42 white cell - >2 white background --- 2 faint
+    33 blue char -- 43 blue cell -- >3 blue background ---- 3 italic
+    34 grey char -- 44 grey cell -- >4 grey background ---- 4 underscore
+    35 black char - 45 black cell - >5 black background --- 7 reverse video
+    36 white char - 46 white cell - >6 white background --- 8 invisible
+    37 blue char -- 47 blue cell -- >7 blue background
+
+The codes can be combined by separating them with a semicolon.
+
+How do I launch AROS-hosted in fullscreen?
+------------------------------------------
+
+Call "export AROS_X11_FULLSCREEN=1" in a shell. Start AROS and change the 
+screen resolution in the screenmode preferences. Quit AROS and start it again.
+
+How to make 2-state AROS Icons?
+-------------------------------
+
+AROS icons is actually renamed PNG files. But if you want icons in two states 
+(free/clicked) use this command::
+
+    join img_1.png img_2.png TO img.info
+    
+How to mount an ISO image on AROS? And can I update my nightly build this way?
+------------------------------------------------------------------------------
+
+Get the ISO into AROS (by wget or else way)
+Copy the ISO into sys:DiskImages (drawer must be created if it isn`t exist). 
+Rename ISO to Unit0 in that dir.
+You must add this to your Devs:Mountlist ::
+
+    ISO:
+    FileSystem = cdrom.handler
+    Device = fdsk.device
+    Unit = 0
+
+Then mount ISO:
+you can copy anything from ISO: Or for example, make a script to update your 
+nightly build like this::
+
+    *Copy ISO:boot/aros-pc-i386.gz sys:boot/
+    *copy ISO:C sys:C all quiet
+    *copy ISO:Classes sys:Classes all quiet
+    *copy *copy ISO:Demos sys:Demos all quiet
+
+and so on for each directory except Prefs, Extras:Networking/Stacks, and 
+devs:mountlist itself. Prefs have to be kept if you want it. Also you can set 
+AROSTcp to keep it`s settings in separate directory.
+
+If you want to write all over, just do::
+
+    copy ISO:C sys:C all quiet newer  
+    
+How to unmount a volume?
+------------------------
+
+Launch these two commands in CLI::
+    
+    assign DOSVOLUME: dismount
+    assign DOSVOLUME: remove
+
+where DOSVOLUME is DH0:, DF0:, etc
+
+How to mount a FAT Floppy with the FAT.handler?
+-----------------------------------------------
+
+Create a mountfile (text file) with the 3 magic lines::
+
+    device = trackdisk.device
+    filesystem = fat.handler
+    unit = 0
+
+Call it somehow, PC0 for example. Set this file default tool to c:mount in 
+properties (or put mountfile to devs:dosdrivers or sys:storage/dosdrivers)
+Double click on it.
+Insert a FAT formatted floppy.
+See the icon appearing on Wanderer`s desktop.
+
+How to mount a real HD FAT partition with the FAT.handler?
+----------------------------------------------------------
+
+First you`d need to read the drive`s geometry and write down some values. 
+You can use HDToolbox or linux fdisk for that. The BlocksPerTrack value is taken 
+from the sectors/track value. Note that it has absolutely nothing to do with 
+the physical disk geometry - FAT only uses it as a multiplier.
+If you get the Cylinders eg from HDToolbox or using the Linux fdisk like this::
+
+    sudo fdisk -u -l /dev/hda, 
+    
+Then you'll need to set BlocksPerTrack=63. 
+To ensure you have numbers in cylinders look for Units=Cylinders in output. If 
+you got fdisk output in sectors (Units=sectors), set BlocksPerTrack=1.
+
+LowCyl and HighCyl is partition`s cylinders seen like::
+
+    mark@ubuntu:~$ sudo fdisk -l -u /dev/hda
+    ...
+    /dev/hda1 * 63 20980889 10490413+ c W95 FAT32 (LBA)
+
+So, LowCyl is 63, and HighCyl is 20980889, blockspertrack=1
+
+Create a mountfile (text file) with these lines::
+
+    
+    device = ata.device
+    filesystem = fat.handler,
+    Unit = 0
+
+    BlocksPerTrack = 1
+    LowCyl = 63
+    HighCyl = 20980889
+    Blocksize=512
+
+Call it somehow, FAT0 for example
+Set this file`s default tool to c:mount in properties
+(or put mountfile to devs:dosdrivers or sys:storage/dosdrivers)
+Double click on it
+See the icon appearing on Wanderer`s desktop
+
+Note: Formulae for counting the blocks
+block = ((highcyl - lowcyl) x surfaces + head) x blockspertrack + sec
 
 Hardware questions
 ==================
