Updated to SVN rev. 136 from TheBar's own repository. Synchronized revision in *.conf files.
git-svn-id: https://svn.aros.org/svn/aros/trunk@27551 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/mui/classes/thebar/ChangeLog
+++ b/contrib/mui/classes/thebar/ChangeLog
@@ -9,6 +9,12 @@ $URL: https://thebar.svn.sourceforge.net/svnroot/thebar/trunk/ChangeLog $
 
   * AROS port
 
+#### v21.5 RELEASE ############################################################
+
+2007-12-21 Jens Langner <Jens.Langner@light-speed.de>
+
+  * misc: final release preparation changes.
+
 2007-12-04 Jens Langner <Jens.Langner@light-speed.de>
 
   * mcc/button/build.c: fixed a possible crash bug where a NUL pointer
